grammar.js
    source_file: $ => repeat($._definition),

    _definition: $ => choice(
      $.header,
      $.code_file,
      // Bare expressions/literals for testing (will be refined later)
      $._expression,
    ),

    // ─── Top-level Structures ───────────────────────────────────

    header: $ => seq(
      "header",
      field("name", $.identifier),
      optional($.uses_clause),
      repeat($._header_declaration),
      "endHeader",
    ),

    code_file: $ => seq(
      "code",
      field("name", $.identifier),
      repeat($._code_declaration),
      "endCode",
    ),

    _header_declaration: $ => choice(
      $.const_declaration,
      $.enum_declaration,
      $.type_declaration,
      $.error_declaration,
      $.var_declaration,
      $.functions_section,
      $.interface_declaration,
      $.class_declaration,
    ),

    _code_declaration: $ => choice(
      $.const_declaration,
      $.enum_declaration,
      $.type_declaration,
      $.error_declaration,
      $.var_declaration,
      $.function_declaration,
      $.interface_declaration,
      $.class_declaration,
      $.behavior_declaration,
    ),

    // ─── Uses Clause ────────────────────────────────────────────

    var_declaration: $ => seq(
      "var",
      $.var_declarator,
      repeat(seq($._var_declarator_start, $.var_declarator)),
    ),

    var_declarator: $ => seq(
      repeat(seq(field("name", $.identifier), ",")),
      field("name", $.identifier),
      ":",
      field("type", $._type),
      optional(seq("=", field("value", $._expression))),
    ),

    // ─── Types ──────────────────────────────────────────────────

    _type: $ => choice(
      $.primitive_type,
      $.pointer_type,
      $.array_type,
      $.record_type,
      $.function_type,
      $.named_type,
    ),

    primitive_type: _ => choice(
      "int", "bool", "char", "double", "void", "typeOfNull", "anyType",
    ),

    pointer_type: $ => seq(
      "ptr", "to",
      field("type", $._type),
    ),

    array_type: $ => seq(
      "array",
      optional(seq("[", commaSep1($.array_dimension), "]")),
      "of",
      field("type", $._type),
    ),

    named_type: $ => prec.right(seq(
      field("name", $.identifier),
      optional($.type_arguments),
    )),

    parameter_list: $ => seq(
      "(",
      optional(commaSep1($.parameter)),
      ")",
    ),

    parameter: $ => seq(
      repeat(seq(field("name", $.identifier), ",")),
      field("name", $.identifier),
      ":",
      field("type", $._type),
    ),

    // ─── Functions (stubs for Phase 3) ──────────────────────────

    functions_section: $ => seq(
      "functions",
      repeat1($.function_prototype),
    ),

    function_prototype: $ => seq(
      optional("external"),
      field("name", $.identifier),
      $.parameter_list,
      optional(seq("returns", field("return_type", $._type))),
    ),

    function_declaration: $ => seq(
      "function",
      field("name", $.identifier),
      $.parameter_list,
      optional(seq("returns", field("return_type", $._type))),
      repeat($.var_declaration),
      repeat($._statement),
      "endFunction",
    ),

    // ─── OOP ─────────────────────────────────────────────────────

    interface_declaration: $ => seq(
      "interface",
      field("name", $.identifier),
      optional($.type_parameters),
      optional($.extends_clause),
      optional($.messages_section),
      "endInterface",
    ),

    extends_clause: $ => seq(
      "extends",
      commaSep1($.named_type),
    ),

    messages_section: $ => seq(
      "messages",
      repeat1($.method_prototype),
    ),

    class_declaration: $ => seq(
      "class",
      field("name", $.identifier),
      optional($.type_parameters),
      optional($.implements_clause),
      optional(seq("superclass", field("superclass", $.named_type))),
      optional($.fields_section),
      optional($.methods_section),
      "endClass",
    ),

    implements_clause: $ => seq(
      "implements",
      commaSep1($.named_type),
    ),

    fields_section: $ => seq(
      "fields",
      repeat1($.class_field),
    ),

    class_field: $ => seq(
      repeat(seq(field("name", $.identifier), ",")),
      field("name", $.identifier),
      ":",
      field("type", $._type),
    ),

    methods_section: $ => seq(
      "methods",
      repeat1($.method_prototype),
    ),

    type_parameters: $ => seq(
      "[",
      commaSep1($.type_parameter),
      "]",
    ),

    type_parameter: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", $._type),
    ),

    behavior_declaration: $ => seq(
      "behavior",
      field("name", $.identifier),
      optional(seq("for", field("for", $.named_type))),
      repeat1($.method_declaration),
      "endBehavior",
    ),

    method_declaration: $ => seq(
      "method",
      $.method_prototype,
      repeat($.var_declaration),
      repeat($._statement),
      "endMethod",
    ),

    method_prototype: $ => choice(
      $._normal_method_proto,
      $._infix_method_proto,
      $._prefix_method_proto,
      $._keyword_method_proto,
    ),

    _normal_method_proto: $ => seq(
      field("name", $.identifier),
      $.parameter_list,
      optional(seq("returns", field("return_type", $._type))),
    ),

    _infix_method_proto: $ => seq(
      "infix",
      field("name", $.identifier),
      $.parameter_list,
      optional(seq("returns", field("return_type", $._type))),
    ),

    _prefix_method_proto: $ => seq(
      "prefix",
      field("operator", $.prefix_operator),
      $.parameter_list,
      optional(seq("returns", field("return_type", $._type))),
    ),

    prefix_operator: _ => choice("!", "-", "*", "&", "~"),

    _keyword_method_proto: $ => prec.right(seq(
      repeat1($.keyword_parameter),
      optional(seq("returns", field("return_type", $._type))),
    )),

    keyword_parameter: $ => seq(
      field("keyword", $.identifier),
      ":",
      field("type", $._type),
    ),

    // ─── Statements ────────────────────────────────────────────

    _statement: $ => choice(
      $.if_statement,
      $.while_statement,
      $.do_until_statement,
      $.for_statement,
      $.switch_statement,
      $.try_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.throw_statement,
      $.free_statement,
      $.debug_statement,
      $.assignment_statement,
      $.expression_statement,
    ),

    if_statement: $ => seq(
      "if",
      field("condition", $._expression),
      repeat($._statement),
      repeat($.elseif_clause),
      optional($.else_clause),
      "endIf",
    ),

    elseif_clause: $ => seq(
      "elseIf",
      field("condition", $._expression),
      repeat($._statement),
    ),

    else_clause: $ => seq(
      "else",
      repeat($._statement),
    ),

    while_statement: $ => seq(
      "while",
      field("condition", $._expression),
      repeat($._statement),
      "endWhile",
    ),

    do_until_statement: $ => seq(
      "do",
      repeat($._statement),
      "until",
      field("condition", $._expression),
    ),

    for_statement: $ => seq(
      "for",
      field("iterator", $._expression),
      "=",
      field("from", $._expression),
      "to",
      field("to", $._expression),
      optional(seq("by", field("by", $._expression))),
      repeat($._statement),
      "endFor",
    ),

    switch_statement: $ => seq(
      "switch",
      field("value", $._expression),
      repeat1($.case_clause),
      optional($.default_clause),
      "endSwitch",
    ),

    case_clause: $ => seq(
      "case",
      field("value", $._expression),
      ":",
      repeat($._statement),
    ),

    default_clause: $ => seq(
      "default",
      ":",
      repeat($._statement),
    ),

    try_statement: $ => seq(
      "try",
      repeat($._statement),
      repeat1($.catch_clause),
      "endTry",
    ),

    catch_clause: $ => seq(
      "catch",
      field("name", $.identifier),
      $.parameter_list,
      ":",
      repeat($._statement),
    ),

    return_statement: $ => prec.right(seq(
      "return",
      optional($._expression),
    )),

    break_statement: _ => "break",

    continue_statement: _ => "continue",

    throw_statement: $ => seq(
      "throw",
      field("name", $.identifier),
      $.argument_list,
    ),

    free_statement: $ => seq(
      "free",
      $._expression,
    ),

    debug_statement: _ => "debug",

    assignment_statement: $ => seq(
      field("left", $._expression),
      "=",
      field("right", $._expression),
    ),

    // ─── Expressions ────────────────────────────────────────────

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.parenthesized_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.field_access,
      $.method_call,
      $.array_access,
      $.as_ptr_to_expression,
      $.as_integer_expression,
      $.array_size_expression,
      $.is_instance_of_expression,
      $.is_kind_of_expression,
      $.size_of_expression,
      $.constructor_expression,
      $.closure_expression,
    ),

    binary_expression: $ => choice(
      // Logical OR (lowest binary precedence)
      prec.left(PREC.LOGICAL_OR, seq(field("left", $._expression), "||", field("right", $._expression))),
      // Logical AND
      prec.left(PREC.LOGICAL_AND, seq(field("left", $._expression), "&&", field("right", $._expression))),
      // Bitwise OR
      prec.left(PREC.BITWISE_OR, seq(field("left", $._expression), "|", field("right", $._expression))),
      // Bitwise XOR
      prec.left(PREC.BITWISE_XOR, seq(field("left", $._expression), "^", field("right", $._expression))),
      // Bitwise AND
      prec.left(PREC.BITWISE_AND, seq(field("left", $._expression), "&", field("right", $._expression))),
      // Equality
      prec.left(PREC.EQUALITY, seq(field("left", $._expression), "==", field("right", $._expression))),
      prec.left(PREC.EQUALITY, seq(field("left", $._expression), "!=", field("right", $._expression))),
      // Relational
      prec.left(PREC.RELATIONAL, seq(field("left", $._expression), "<", field("right", $._expression))),
      prec.left(PREC.RELATIONAL, seq(field("left", $._expression), "<=", field("right", $._expression))),
      prec.left(PREC.RELATIONAL, seq(field("left", $._expression), ">", field("right", $._expression))),
      prec.left(PREC.RELATIONAL, seq(field("left", $._expression), ">=", field("right", $._expression))),
      // Shift
      prec.left(PREC.SHIFT, seq(field("left", $._expression), "<<", field("right", $._expression))),
      prec.left(PREC.SHIFT, seq(field("left", $._expression), ">>", field("right", $._expression))),
      prec.left(PREC.SHIFT, seq(field("left", $._expression), ">>>", field("right", $._expression))),
      // Additive
      prec.left(PREC.ADDITIVE, seq(field("left", $._expression), "+", field("right", $._expression))),
      prec.left(PREC.ADDITIVE, seq(field("left", $._expression), "-", field("right", $._expression))),
      // Multiplicative
      prec.left(PREC.MULTIPLICATIVE, seq(field("left", $._expression), "*", field("right", $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field("left", $._expression), "/", field("right", $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field("left", $._expression), "%", field("right", $._expression))),
    ),

    argument_list: $ => seq(
      "(",
      optional(commaSep1($._expression)),
      ")",
    ),

    integer_literal: _ => /[0-9]+/,

    hex_literal: _ => /0[xX][0-9a-fA-F]+/,

    double_literal: _ => /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,

    char_literal: _ => /'([^'\\]|\\.)'/,

    string_literal: _ => /"([^"\\]|\\.)*"/,

    bool_literal: _ => choice("true", "false"),

    null_literal: _ => "null",

    self_expression: _ => "self",

    super_expression: _ => "super",

    // ─── Comments ───────────────────────────────────────────────

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});

// ─── Helpers ──────────────────────────────────────────────────────

/**
 * Comma-separated list with at least one element.
 * @param {RuleOrLiteral} rule
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
