test/corpus/literals.txt
================================================================================
Integer literal
================================================================================

123

--------------------------------------------------------------------------------

(source_file
  (integer_literal))

================================================================================
Hex literal
================================================================================

0x1A2F

--------------------------------------------------------------------------------

(source_file
  (hex_literal))

================================================================================
Double literal
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file
  (double_literal))

================================================================================
Character literal
================================================================================

'a'

--------------------------------------------------------------------------------

(source_file
  (char_literal))

================================================================================
String literal
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  (string_literal))

================================================================================
Boolean literals
================================================================================

true
false

--------------------------------------------------------------------------------

(source_file
  (bool_literal)
  (bool_literal))

================================================================================
Null literal
================================================================================

null

--------------------------------------------------------------------------------

(source_file
  (null_literal))

================================================================================
Self expression
================================================================================

self

--------------------------------------------------------------------------------

(source_file
  (self_expression))

================================================================================
Super expression
================================================================================

super

--------------------------------------------------------------------------------

(source_file
  (super_expression))

================================================================================
Identifier
================================================================================

myVariable

--------------------------------------------------------------------------------

(source_file
  (identifier))

================================================================================
Double with exponent
================================================================================

1.5e10

--------------------------------------------------------------------------------

(source_file
  (double_literal))

================================================================================
Escaped string
================================================================================

"hello\nworld"

--------------------------------------------------------------------------------

(source_file
  (string_literal))
