test/corpus/statements.txt
================================================================================
If statement
================================================================================

code Test
  function main ()
    if true
    endIf
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (if_statement
        condition: (bool_literal)))))

================================================================================
If else statement
================================================================================

code Test
  function main ()
    if true
    else
    endIf
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (if_statement
        condition: (bool_literal)
        (else_clause)))))

================================================================================
If elseIf else statement
================================================================================

code Test
  function main ()
    if true
    elseIf false
    else
    endIf
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (if_statement
        condition: (bool_literal)
        (elseif_clause
          condition: (bool_literal))
        (else_clause)))))

================================================================================
While statement
================================================================================

code Test
  function main ()
    while true
    endWhile
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (while_statement
        condition: (bool_literal)))))

================================================================================
Do until statement
================================================================================

code Test
  function main ()
    do
    until true
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (do_until_statement
        condition: (bool_literal)))))

================================================================================
For statement
================================================================================

code Test
  function main ()
    for i = 0 to 10
    endFor
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (for_statement
        iterator: (identifier)
        from: (integer_literal)
        to: (integer_literal)))))

================================================================================
For statement with by
================================================================================

code Test
  function main ()
    for i = 0 to 10 by 2
    endFor
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (for_statement
        iterator: (identifier)
        from: (integer_literal)
        to: (integer_literal)
        by: (integer_literal)))))

================================================================================
C-style for statement
================================================================================

code Test
  function main ()
    for (i = 0; i; i = i + 1)
      x = i
    endFor
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (for_statement
        (assignment_statement
          left: (identifier)
          right: (integer_literal))
        condition: (identifier)
        (assignment_statement
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (integer_literal)))
        (assignment_statement
          left: (identifier)
          right: (identifier))))))

================================================================================
Switch statement
================================================================================

code Test
  function main ()
    switch x
      case 1:
      case 2:
      default:
    endSwitch
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (switch_statement
        value: (identifier)
        (case_clause
          value: (integer_literal))
        (case_clause
          value: (integer_literal))
        (default_clause)))))

================================================================================
Try catch statement
================================================================================

code Test
  function main ()
    try
    catch MyError (msg: ptr to array of char):
    endTry
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (try_statement
        (catch_clause
          name: (identifier)
          (parameter_list
            (parameter
              name: (identifier)
              type: (pointer_type
                type: (array_type
                  type: (primitive_type))))))))))

================================================================================
Break statement
================================================================================

code Test
  function main ()
    while true
      break
    endWhile
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (while_statement
        condition: (bool_literal)
        (break_statement)))))

================================================================================
Continue statement
================================================================================

code Test
  function main ()
    while true
      continue
    endWhile
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (while_statement
        condition: (bool_literal)
        (continue_statement)))))

================================================================================
Return with value
================================================================================

code Test
  function main () returns int
    return 42
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      return_type: (primitive_type)
      (return_statement
        (integer_literal)))))

================================================================================
Return without value
================================================================================

code Test
  function main ()
    return
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (return_statement))))

================================================================================
Free statement
================================================================================

code Test
  function main ()
    free p
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (free_statement
        (identifier)))))

================================================================================
Debug statement
================================================================================

code Test
  function main ()
    debug
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (debug_statement))))

================================================================================
Throw statement
================================================================================

code Test
  function main ()
    throw MyError ("something broke")
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (throw_statement
        name: (identifier)
        (argument_list
          (string_literal))))))

================================================================================
Assignment statement
================================================================================

code Test
  function main ()
    x = 42
  endFunction
endCode

--------------------------------------------------------------------------------

(source_file
  (code_file
    name: (identifier)
    (function_declaration
      name: (identifier)
      (parameter_list)
      (assignment_statement
        left: (identifier)
        right: (integer_literal)))))
